VisualforcePage2/src/objects/PurchaseOrderLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <label>PurchaseOrder</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PurchaseOrderLineItem</label>
    <nameField>
        <label>PurchaseOrderLineItems Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseOrderLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>